--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "grunt-contrib-cssmin": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-sass": "~0.14.0",
+    "grunt-sass": "1.1.0-beta",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-autoprefixer": "~1.0.1",
     "grunt-zip": "~0.7.0",
